# LearnRust

./: .env  Cargo.toml  README.md
examples/: mod.rs
migrations/2022-06-05-180545_users/: up.sql
migrations/2022-06-07-064928_todos/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
