[package]
name = "server-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "3.3.3"
env_logger = "0.8.4"
cargo-watch = "8.1.1"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
actix-cors = "0.5.4"
juniper = "0.14.2"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
